force-app/main/default/objects/Newsletter_Subscription__c/Newsletter_Subscription__c.object-meta.xml
<CustomObject>
    <label>Newsletter Subscription</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Newsletter Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newsletter Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>