force-app/main/default/objects/Newsletter_Subscription__c/fields/ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>ActionLabel__c</fullName>
    <formula>CASE(Status__c, &quot;Active&quot;, &quot;Unsubscribe&quot;, &quot;Inactive&quot;, &quot;Re-subscribe&quot;, &quot;Subscribe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActionLabel</label>
    <type>Text</type>
</CustomField>