force-app/main/default/objects/Newsletter_Subscription__c/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <label>Newsletter</label>
    <referenceTo>Newsletter__c</referenceTo>
    <relationshipLabel>Newsletter Subscriptions</relationshipLabel>
    <relationshipName>Newsletter_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>