force-app/main/default/objects/Newsletter_Subscription__c/fields/Newsletter_Title__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Title__c</fullName>
    <formula>Newsletter__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Newsletter Title</label>
    <type>Text</type>
</CustomField>