force-app/main/default/objects/Newsletter_Subscription__c/fields/Signup__c.field-meta.xml
<CustomField>
    <fullName>Signup__c</fullName>
    <label>Signup</label>
    <referenceTo>Signup__c</referenceTo>
    <relationshipLabel>Newsletter Subscriptions</relationshipLabel>
    <relationshipName>Newsletter_Subscriptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>