force-app/main/default/objects/Newsletter_Subscription__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <formula>Signup__r.LastName__c &amp; &quot;, &quot; &amp; Signup__r.FirstName__c &amp; &quot;(&quot; &amp; Signup__r.Email__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber</label>
    <type>Text</type>
</CustomField>